# termcraft

./: Cargo.toml
i18n/en/: about.ftl  cli.ftl  main.ftl  termcraft.ftl
i18n/zh-CN/: about.ftl  cli.ftl  main.ftl  termcraft.ftl
src/: main.rs
src/config/: default_config.json  mod.rs  path_provider.rs
src/functions/: mod.rs
src/i18n/: loader.rs  mod.rs  translator.rs
